--- a/index.html
+++ b/index.html
@@ -19,23 +19,21 @@
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title">Modal title</h5>
               <button type="button" onclick="closeModal()" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <div class="row text-center">
+                <div class="row text-center justify-content-center">
                     <div class="col-sm-6">
                         <img src="" id="imgUser">
                     </div>
                 </div>
-                <div class="col-sm-12">
+                <div class="col-sm-12 text-center">
                     <h1 id="name"></h1>
                     <p id="email"></p>  
                 </div>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" onclick="closeModal()">Close</button>
-              <button type="button" class="btn btn-primary">Save changes</button>
             </div>
           </div>
         </div>
